<resources>
    <string name="app_name">BasketTracker</string>
    <string name="main_start">Jugar</string>
    <string name="main_teams">Equipos</string>
    <string name="team_builder">Constructor</string>
    <string name="team_add">Añadir</string>
    <string name="builder_team_name">Nombre equipo</string>
    <string name="builder_player_name">Nombre jugador</string>
    <string name="player_number">Numero de dorsal</string>
    <string name="save">GUARDAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="accept">Aceptar</string>
    <string name="local_team">Equipo Local</string>
    <string name="visitor_team">Equipo Visitante</string>
</resources>
