<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:background="@android:color/white"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:layout_weight="1"
            android:background="@drawable/border_black"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:layout_marginStart="15dp"
            android:id="@+id/recycler_team_local"
            android:layout_width="0dp"
            android:layout_height="100dp"/>
        <android.support.v7.widget.RecyclerView
            android:layout_weight="1"
            android:background="@drawable/border_black"
            android:id="@+id/recycler_team_vistor"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:layout_width="0dp"
            android:layout_marginEnd="15dp"
            android:layout_height="100dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="center"
            android:text="@string/local_team"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:id="@+id/text_team_local"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textAlignment="center"
            android:text="@string/visitor_team"
            android:layout_weight="1"
            android:id="@+id/text_team_vistor"
            android:layout_width="0dp"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_cancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button_save"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/accept"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>